--- a/sec21sellUrStuff/package.json
+++ b/sec21sellUrStuff/package.json
@@ -17,6 +17,7 @@
     "mustache": "^3.2.0",
     "mustache-express": "^1.3.0",
     "pg": "^7.15.1",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "uuid": "^3.3.3"
   }
 }
